--- a/package.json
+++ b/package.json
@@ -7,12 +7,23 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
     "@testing-library/user-event": "^13.5.0",
+    "@types/connect-mongodb-session": "^2.4.2",
+    "@types/express-session": "^1.17.4",
     "@types/jest": "^27.4.1",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.26",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.13",
+    "body-parser": "^1.19.2",
     "bootstrap": "^5.1.3",
     "clsx": "^1.1.1",
+    "connect-mongodb-session": "^3.1.1",
+    "express": "^4.17.3",
+    "express-mongodb-session": "^3.2.1",
+    "express-session": "^1.17.2",
+    "mongoose": "^6.2.5",
+    "morgan": "^1.10.0",
+    "nodemon": "^2.0.15",
     "prettier": "^2.5.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.2.0",
@@ -21,13 +32,16 @@
     "react-router-dom": "^6.2.2",
     "react-scripts": "5.0.0",
     "typescript": "^4.6.2",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "winston": "^3.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "listen": "nodemon --watch \"src/server/**\" --ext \"ts,json\" --ignore \"src/server/**/*.spec.ts\" --exec \"ts-node --project ./tsconfig.server.json src/server/index.ts\"",
+    "mongo": "mongod --config /usr/local/etc/mongod.conf"
   },
   "eslintConfig": {
     "extends": [
