--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "personal-balance-app",
+  "name": "eestec-2022-front-ed",
   "version": "0.1.0",
   "private": true,
   "license": "MIT",
